chatbox interface design 99%

--- a/navigation/admin.html
+++ b/navigation/admin.html
@@ -212,34 +212,39 @@
                             </div>
                             <div class="chatbox">
                                 <div class="chatbox__head">
-                                    <h1 class="chatbox__head__title">Chatbox</h1>
+                                    <h1 class="chatbox__head__title">CHAT BOX</h1>
                                     <div class="chatbox__head__active">
-                                        <span class="chatbox__head__active__text">Hoạt động</span>
+                                        <span class="chatbox__head__active__text">Đang hoạt động</span>
                                     </div>
                                 </div>
                                 <div class="chatbox__message">
                                     <ul class="chatbox__message__list">
                                         <li class="chatbox__message__item chatbox__message__item__left">
-
+                                            <span class="chatbox__message__item__text">
+                                                Em chào anh/chị Em có thể giúp gì được anh chị ạ!
+                                            </span>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="chatbox__bottom">
                                     <div class="chatbox__bottom__link-social">
                                         <div class="chatbox__bottom__link-social__mess">
-                                            <a href="https://www.messenger.com/t/172967089240726/"
-                                                class="chatbox__bottom__link-social__mess">
-                                                <i class="fa-brands fa-facebook-messenger"></i>
-                                                <span>chat messenger</span>
+                                            <a href="https://www.messenger.com/t/172967089240726/" class="chatbox__bottom__link-social__mess">
+                                                <img class="messenger_ico" src="/img/icon/messenger_ico.png" alt="messenger">
+                                                <ul class="sub">
+                                                    <span>chat với chúng tôi</span>
+                                                    <i class='bx bxs-down-arrow'></i>
+                                                </ul>
                                             </a>
                                         </div>
                                     </div>
                                     <div class="chatbox__bottom__input">
-                                        <input type="text">
-                                        <i class="fa-regular fa-paper-plane"></i>
+                                        <!-- <input type="search" autocomplete="off"> -->
+                                        <textarea id="myTextarea" rows="1" cols="20"></textarea>
+                                        <i class='bx bxs-send' ></i>
                                     </div>
                                 </div>
-
+                
                             </div>
                         </div>
 
