--- a/navigation/chatbox.html
+++ b/navigation/chatbox.html
@@ -44,9 +44,9 @@
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
                     <ul>
-                        <li><a class="header__inner__navigation__sevice" href="./index.html">TRANG CHỦ</a>
+                        <li><a class="header__inner__navigation__sevice" href="../index.html">TRANG CHỦ</a>
                         </li>
-                        <li><a class="header__inner__navigation__sevice" href="./navigation/forum.html">DIỄN ĐÀN</a>
+                        <li><a class="header__inner__navigation__sevice" href="../navigation/forum.html">DIỄN ĐÀN</a>
                         </li>
                         <li>
                             <div class="dropdown">
@@ -55,15 +55,15 @@
                                     <m><i class='bx bxs-right-arrow'></i></m>
                                 </a>
                                 <div class="containt">
-                                    <a href="./navigation/card.html">THẺ HỘI VIÊN</a>
-                                    <a href="./navigation/train.html">HUẤN LUYỆN VIÊN</a>
-                                    <a href="./navigation/shop.html">CỬA HÀNG WHEY</a>
-                                    <a href="./navigation/chatbox.html"><span>CHAT ONLINE</span></a>
-                                    <a href="./navigation/test.html">TEST</a>
+                                    <a href="../navigation/card.html">THẺ HỘI VIÊN</a>
+                                    <a href="../navigation/train.html">HUẤN LUYỆN VIÊN</a>
+                                    <a href="../navigation/shop.html">CỬA HÀNG WHEY</a>
+                                    <a href="../navigation/chatbox.html"><span>CHAT ONLINE</span></a>
+                                    <a href="../navigation/test.html">TEST</a>
                                 </div>
                             </div>
                         </li>
-                        <li><a class="header__inner__navigation__sevice" href="./navigation/promotion.html">KHUYẾN
+                        <li><a class="header__inner__navigation__sevice" href="../navigation/promotion.html">KHUYẾN
                                 MÃI</a></li>
                     </ul>
                 </div>
@@ -81,7 +81,7 @@
                                 <a class="loginstatus status" href="#">
                                     ĐĂNG NHẬP
                                 </a>
-                                <a class="status" href="./navigation/information_account.html">
+                                <a class="status" href="../navigation/information_account.html">
                                     THÔNG TIN TK
                                 </a>
                                 <a class="status" href="#">
@@ -120,13 +120,13 @@
                                 </div>
                                 <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
                             </div>
-                            <a class="content__inner" href="./index.html">
+                            <a class="content__inner" href="../index.html">
                                 <i class='bx bxs-home'></i>
                                 <span class="noidung__text1">
                                     TRANG CHỦ
                                 </span>
                             </a>
-                            <a class="content__inner" href="./navigation/forum.html">
+                            <a class="content__inner" href="../navigation/forum.html">
                                 <i class='bx bx-world'></i>
                                 <span class="noidung__text1">
                                     DIỄN ĐÀN
@@ -140,21 +140,21 @@
                                     </span>
                                 </b>
                                 <div class="noidung222">
-                                    <a class="content__inner" href="./navigation/card.html">
+                                    <a class="content__inner" href="../navigation/card.html">
                                         THẺ HỘI VIÊN
                                     </a>
-                                    <a class="content__inner" href="./navigation/train.html">
+                                    <a class="content__inner" href="../navigation/train.html">
                                         HUẤN LUYỆN VIÊN
                                     </a>
-                                    <a class="content__inner" href="./navigation/shop.html">
+                                    <a class="content__inner" href="../navigation/shop.html">
                                         CỬA HÀNG WHEY
                                     </a>
-                                    <a class="content__inner" href="./navigation/chatbox.html">
+                                    <a class="content__inner" href="../navigation/chatbox.html">
                                         CHAT ONLINE
                                     </a>
                                 </div>
                             </div>
-                            <a class="content__inner" href="./navigation/promotion.html">
+                            <a class="content__inner" href="../navigation/promotion.html">
                                 <i class='bx bxs-purchase-tag'></i>
                                 <span class="noidung__text1">
                                     KHUYẾN MÃI
