edit menu login, add ifm card and ts

--- a/index.html
+++ b/index.html
@@ -70,27 +70,27 @@
                     </ul>
                 </div>
                 <div class="header__inner__login">
-                    <ul class="">
+                    <ul class="header__inner__login__inner">
                         <li class="submenu__login">
                             <a class="account-avt account" href="#" onclick="yourFunction(event)">
                             </a>
-                            <div class="status__account">
-                                <a class="loginstatus status" href="#">
-                                    ĐĂNG NHẬP
-                                </a>
-                                <a class="status" href="./navigation/information_account.html">
-                                    THÔNG TIN TK
-                                </a>
-                                <a class="status" href="#">
-                                    THẺ THÀNH VIÊN
-                                </a>
-                                <a class="status" href="#">
-                                    LỊCH TẬP
-                                </a>
-                                <a class="logoutstatus status" href="">
-                                    ĐĂNG XUẤT
-                                </a>
-                            </div>
+                            <ul class="submenu__login__content">
+                                <i class="fa-solid fa-caret-up"></i>
+                                <div class="status__account">
+                                    <a class="loginstatus status" href="#">
+                                        ĐĂNG NHẬP
+                                    </a>
+                                    <a class="status" href="./navigation/information_account.html">
+                                        THÔNG TIN TÀI KHOẢN
+                                    </a>
+                                    <a class="status" href="./navigation/information_card_TS.html">
+                                        THẺ THÀNH VIÊN & LT
+                                    </a>
+                                    <a class="logoutstatus status" href="">
+                                        ĐĂNG XUẤT
+                                    </a>
+                                </div>
+                            </ul>
                         </li>
                     </ul>
                 </div>
