add information card and training schedule 61%

--- a/navigation/information_card_TS.html
+++ b/navigation/information_card_TS.html
@@ -136,6 +136,13 @@
                                 Thông tin thẻ thành viên
                             </h1>
                         </div>
+                        <div class="page__header night__mode">
+                            <div class="night__mode__selection">
+                                <button class="night__mode__button">
+                                    <i class='bx bxs-moon'></i>
+                                </button>
+                            </div>
+                        </div>
                     </div>
                     <div id="table1" class="first__table">
                         <div class="card__information">
@@ -200,10 +207,48 @@
                             </div>
                             <div class="border__top">
                                 <div class="rows">
-                                    <div class="rows part__one__and__two">
-                                        <div class="rows part__one">
-                                            <div class="part__one__title">
-                                                <a href="">Xem điều khoản sử dụng</a>
+                                    <div class="rows rules">
+                                        <div class="rules rules__group">
+                                            <div class="rules__group rules__group__title">
+                                                <a class="rules__group__title rules__group__title__content" >
+                                                    Xem điều khoản sử dụng
+                                                </a>
+                                                <div class="rules__group__content">
+                                                    <ul class="group__rules">
+                                                        <li class="group__rules__title">
+                                                            Điều khoản sử dụng
+                                                        </li>
+                                                        <li class="group__rules title__and__content">
+                                                            <span class="group__rules title__content">
+                                                                Thẻ Hội Viên:
+                                                            </span>
+                                                            Thẻ hội viên là thẻ được cấp bởi phòng gym cho bạn để 
+                                                            ra vào và sử dụng dịch vụ. Hãy giữ thẻ này cẩn thận 
+                                                            và không chia sẻ với người khác.
+                                                        </li>
+                                                        <li class="group__rules title__and__content">
+                                                            <span class="group__rules title__content">
+                                                                Tuân thủ Điều Khoản và Điều Kiện:
+                                                            </span>
+                                                            Trước khi sử dụng dịch vụ, bạn cần đọc kỹ và tuân thủ các 
+                                                            điều khoản và điều kiện của phòng gym. Điều này bao gồm 
+                                                            việc tuân thủ quy định về thời hạn, giờ mở cửa, và các quy định khác.
+                                                        </li>
+                                                        <li class="group__rules title__and__content">
+                                                            <span class="group__rules title__content">
+                                                                Bảo quản thông tin tài khoản:
+                                                            </span>
+                                                            Tài khoản thành viên chỉ áp dụng cho một hội viên duy nhất. 
+                                                            Bạn cần tự bảo quản thông tin tài khoản của mình và không 
+                                                            chia sẻ với người khác
+                                                        </li>
+                                                        <li class="group__rules button__hide">
+                                                            <button class="button__hide button__hide__terms__of__use">
+                                                                Xác nhận
+                                                            </button>
+                                                        </li>
+                                                    </ul>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -423,6 +468,7 @@
     <div class="nen_mo"></div>
     <script src="./index.js"></script>
     <script src="../navigation_javascript/menuv2.js"></script>
+    <script src="../navigation_javascript/terms_of_use.js"></script>
 </body>
 
 </html>
