--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
             </div>
             <div class="modal__body__box login-box">
                 <p>Đăng nhập tài khoản</p>
-                <form>
+                <div>
                     <div class="user-box">
                         <input class="login-email" required="" name="" type="text">
                         <label>Email</label>
@@ -556,12 +556,12 @@
                         <span></span>
                         Đăng nhập
                     </button>
-                </form>
+                </div>
                 <p>Chưa có tài khoản? <span class="a2 link-create-account">Đăng ký!</span></p>
             </div>
             <div class="modal__body__box create-account-box">
                 <p>Đăng nhập tài khoản</p>
-                <form>
+                <div>
                     <div class="user-box">
                         <input class="login-name" required="" name="" type="text">
                         <label>Họ và tên</label>
@@ -585,7 +585,7 @@
                         <span></span>
                         Đăng ký
                     </button>
-                </form>
+                </div>
                 <p>Đã có tài khoản? <span class="a2 link-login">Đăng nhập!</span></p>
             </div>
             
