edit information account interface

--- a/navigation/information_account.html
+++ b/navigation/information_account.html
@@ -137,15 +137,14 @@
                             </h1>
                         </div>
                         <div class="page__header change__the__password">
-                            <a href="" class="change__the__password key__ico">
+                            <a class="change__the__password key__ico">
                                 <i class="fa-solid fa-key"></i>
                             </a>
                             <ul class="change__the__password__group">
-                                <a href="" class="change__the__password__group change__the__password__group__content">
+                                <a class="change__the__password__group change__the__password__group__content">
                                     Thay đổi mật khẩu
                                 </a>
-                                <a href=""
-                                    class="change__the__password__group change__the__password__group__sub__content">
+                                <a class="change__the__password__group change__the__password__group__sub__content">
                                     Bảo mật
                                 </a>
                             </ul>
@@ -204,9 +203,16 @@
                                     </div>
                                     <div class="rows third__part">
                                         <div class="rows third__part__selection">
-                                            <div class="third__part__a">
+                                            <!-- <div class="third__part__a">
                                                 <div class="third__part__a third__part__a__content">
                                                     <span id="edit-name" class="third__part__a__content__edit__fullname">
+                                                        Chỉnh sửa tên
+                                                    </span>
+                                                </div>
+                                            </div> -->
+                                            <div class="third__part__c">
+                                                <div class="third__part__c third__part__c__content">
+                                                    <span id="edit-name" class="third__part__c__content__edit__fullname">
                                                         Chỉnh sửa tên
                                                     </span>
                                                 </div>
